refactorizando mazo v3